--- a/css/quiz.css
+++ b/css/quiz.css
@@ -5,7 +5,7 @@
 .question-inner {
     text-align: center;
     padding: 2rem 1rem;
-    background-color: #e9ecef;
+    background-color: white;
     border-radius: 0.3rem;
     max-height: 100%;
     flex-grow: 1;
